--- a/services/webserver/default.conf
+++ b/services/webserver/default.conf
@@ -7,24 +7,27 @@
 #	}
 #}
 
+#	redirect 80 to 443!
+#	Try uri...
+
 server {
-    listen       80;
-    listen  [::]:80;
-    server_name  localhost;
+	listen	80;
+	listen	[::]:80;
+	server_name  localhost;
 
-    location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
-    }
+	location / {
+		root   /usr/share/nginx/html;
+		index  index.html index.htm;
+	}
 
-    error_page   500 502 503 504  /50x.html;
+	error_page   500 502 503 504  /50x.html;
 
-    location = /50x.html {
-        root   /usr/share/nginx/html;
-    }
+	location = /50x.html {
+		root   /usr/share/nginx/html;
+	}
 
-    location /home/ {
-    	proxy_pass		http://home:8000;
+	location /home/ {
+	proxy_pass		http://home:8000;
 	proxy_http_version	1.1;
 	proxy_set_header	Upgrade		$http_upgrade;
 	proxy_set_header	Connection	"upgrade";
@@ -33,10 +36,10 @@ server {
 	proxy_set_header	X-Real-IP	$remote_addr;
 	proxy_set_header	X-Forward-For	$proxy_add_x_forwarded_for;
 	proxy_set_header	X-Forward-Host	$server_name;
-    }
+	}
 
-    location /cat/ {
-    	proxy_pass		http://cat:8001;
+	location /chat/ {
+	proxy_pass		http://chat:8001;
 	proxy_http_version	1.1;
 	proxy_set_header	Upgrade		$http_upgrade;
 	proxy_set_header	Connection	"upgrade";
@@ -45,5 +48,41 @@ server {
 	proxy_set_header	X-Real-IP	$remote_addr;
 	proxy_set_header	X-Forward-For	$proxy_add_x_forwarded_for;
 	proxy_set_header	X-Forward-Host	$server_name;
-    }
+	}
+
+	location /user/ {
+	proxy_pass			http://user:8002;
+	proxy_http_version	1.1;
+	proxy_set_header	Upgrade		$http_upgrade;
+	proxy_set_header	Connection	"upgrade";
+	proxy_redirect		off;
+	proxy_set_header	Host		$host;
+	proxy_set_header	X-Real-IP	$remote_addr;
+	proxy_set_header	X-Forward-For	$proxy_add_x_forwarded_for;
+	proxy_set_header	X-Forward-Host	$server_name;
+	}
+
+	location /pong/ {
+	proxy_pass			http://pong:8003;
+	proxy_http_version	1.1;
+	proxy_set_header	Upgrade		$http_upgrade;
+	proxy_set_header	Connection	"upgrade";
+	proxy_redirect		off;
+	proxy_set_header	Host		$host;
+	proxy_set_header	X-Real-IP	$remote_addr;
+	proxy_set_header	X-Forward-For	$proxy_add_x_forwarded_for;
+	proxy_set_header	X-Forward-Host	$server_name;
+	}
+
+	location /tetris/ {
+	proxy_pass			http://tetris:8004;
+	proxy_http_version	1.1;
+	proxy_set_header	Upgrade		$http_upgrade;
+	proxy_set_header	Connection	"upgrade";
+	proxy_redirect		off;
+	proxy_set_header	Host		$host;
+	proxy_set_header	X-Real-IP	$remote_addr;
+	proxy_set_header	X-Forward-For	$proxy_add_x_forwarded_for;
+	proxy_set_header	X-Forward-Host	$server_name;
+	}
 }
