--- a/services/webserver/default.conf
+++ b/services/webserver/default.conf
@@ -27,7 +27,19 @@ server {
 	}
 
 	location /home/ {
-	proxy_pass		http://home:8000;
+	proxy_pass			http://home:8000;
+	proxy_http_version	1.1;
+	proxy_set_header	Upgrade		$http_upgrade;
+	proxy_set_header	Connection	"upgrade";
+	proxy_redirect		off;
+	proxy_set_header	Host		$host;
+	proxy_set_header	X-Real-IP	$remote_addr;
+	proxy_set_header	X-Forward-For	$proxy_add_x_forwarded_for;
+	proxy_set_header	X-Forward-Host	$server_name;
+	}
+
+	location /cat/ {
+	proxy_pass			http://cat:8001;
 	proxy_http_version	1.1;
 	proxy_set_header	Upgrade		$http_upgrade;
 	proxy_set_header	Connection	"upgrade";
@@ -39,7 +51,7 @@ server {
 	}
 
 	location /chat/ {
-	proxy_pass		http://chat:8001;
+	proxy_pass			http://chat:8001;
 	proxy_http_version	1.1;
 	proxy_set_header	Upgrade		$http_upgrade;
 	proxy_set_header	Connection	"upgrade";
@@ -50,7 +62,7 @@ server {
 	proxy_set_header	X-Forward-Host	$server_name;
 	}
 
-	location /user/ {
+	location /user/ {	#	No ws needed
 	proxy_pass			http://user:8002;
 	proxy_http_version	1.1;
 	proxy_set_header	Upgrade		$http_upgrade;
