--- a/services/webserver/default.conf
+++ b/services/webserver/default.conf
@@ -65,8 +65,8 @@ server {
 	location /user/ {	#	No ws needed
 	proxy_pass			http://user:8002;
 	proxy_http_version	1.1;
-#	proxy_set_header	Upgrade		$http_upgrade;
-#	proxy_set_header	Connection	"upgrade";
+	proxy_set_header	Upgrade		$http_upgrade;
+	proxy_set_header	Connection	"upgrade";
 	proxy_redirect		off;
 	proxy_set_header	Host		$host;
 	proxy_set_header	X-Real-IP	$remote_addr;
