--- a/retourVm/transcendance/services/webserver/default.conf
+++ b/retourVm/transcendance/services/webserver/default.conf
@@ -9,19 +9,26 @@
 
 #	Try uri...	##Maybe not
 
-#server {
-#	listen	80;
-#	listen	[::]:80;
-#	server_name _;
-#	return 301 https://$host$request_uri;
-#}
+server {
+	listen	80;
+	listen	8080;
+	listen	[::]:80;
+	listen	[::]:8080;
+	#server_name _;	#localhost
+	server_name	localhost;
+	return 301 https://$host$request_uri;
+}
 
 server {
-	listen		80;
-	listen		8080;
-	listen		[::]:80;
-	listen		[::]:8080;
-	server_name	localhost;
+	listen			443 ssl;
+	listen			4433 ssl;
+	listen			[::]:443 ssl;
+	listen			[::]:4433 ssl;
+	server_name		localhost;
+	ssl_protocols		TLSv1.2 TLSv1.3;
+	ssl_certificate		/root/crt.pem;
+	ssl_certificate_key	/root/key.pem;
+
 	#root		/srv/www/;
 
 	location / {
