--- a/retourVm/transcendance/services/webserver/default.conf
+++ b/retourVm/transcendance/services/webserver/default.conf
@@ -42,30 +42,6 @@ server {
 	#	root   /usr/share/nginx/html;
 	#}
 
-#	location /home/ {
-#	proxy_pass			http://home:8000;
-#	proxy_http_version	1.1;
-#	proxy_set_header	Upgrade		$http_upgrade;
-#	proxy_set_header	Connection	"upgrade";
-#	proxy_redirect		off;
-#	proxy_set_header	Host		$host;
-#	proxy_set_header	X-Real-IP	$remote_addr;
-#	proxy_set_header	X-Forward-For	$proxy_add_x_forwarded_for;
-#	proxy_set_header	X-Forward-Host	$server_name;
-#	}
-
-#	location /cat/ {
-#	proxy_pass			http://cat:8001;
-#	proxy_http_version	1.1;
-#	proxy_set_header	Upgrade		$http_upgrade;
-#	proxy_set_header	Connection	"upgrade";
-#	proxy_redirect		off;
-#	proxy_set_header	Host		$host;
-#	proxy_set_header	X-Real-IP	$remote_addr;
-#	proxy_set_header	X-Forward-For	$proxy_add_x_forwarded_for;
-#	proxy_set_header	X-Forward-Host	$server_name;
-#	}
-
 	location /ws/chat/ {
 	proxy_pass		http://chat:8000;
 	proxy_http_version	1.1;
@@ -78,17 +54,17 @@ server {
 	proxy_set_header	X-Forward-Host	$server_name;
 	}
 
-#	location /user/ {	#	No ws needed
-#	proxy_pass		http://user:8002;
-#	proxy_http_version	1.1;
-##	proxy_set_header	Upgrade		$http_upgrade;
-##	proxy_set_header	Connection	"upgrade";
-#	proxy_redirect		off;
-#	proxy_set_header	Host		$host;
-#	proxy_set_header	X-Real-IP	$remote_addr;
-#	proxy_set_header	X-Forward-For	$proxy_add_x_forwarded_for;
-#	proxy_set_header	X-Forward-Host	$server_name;
-#	}
+	location /user/ {	#	No ws needed
+	proxy_pass		http://user:8001;
+	proxy_http_version	1.1;
+#	proxy_set_header	Upgrade		$http_upgrade;
+#	proxy_set_header	Connection	"upgrade";
+	proxy_redirect		off;
+	proxy_set_header	Host		$host;
+	proxy_set_header	X-Real-IP	$remote_addr;
+	proxy_set_header	X-Forward-For	$proxy_add_x_forwarded_for;
+	proxy_set_header	X-Forward-Host	$server_name;
+	}
 
 #	location /pong/ {
 #	proxy_pass		http://pong:8003;
