--- a/retourVm/transcendance/compose.yml
+++ b/retourVm/transcendance/compose.yml
@@ -72,10 +72,10 @@ services:
       - transcendance
     restart: unless-stopped
     environment:
-      - EMAIL_HOST=
-      - EMAIL_PORT=
-      - EMAIL_HOST_USER=
-      - EAIL_HOST_PASSWORD=
+      - EMAIL_HOST=$EMAIL_HOST
+      - EMAIL_PORT=$EMAIL_PORT
+      - EMAIL_HOST_USER=$EMAIL_HOST_USER
+      - EMAIL_HOST_PASSWORD=$EMAIL_HOST_PASSWORD
 
 #  pong:
 #    pull_policy: build
