--- a/retourVm/transcendance/services/Webserver/default.conf
+++ b/retourVm/transcendance/services/Webserver/default.conf
@@ -1,11 +1,17 @@
 server {
 	listen	80;
-	listen	8080;
 	listen	[::]:80;
+	#server_name _;	#localhost
+	server_name	localhost;
+	return 301 https://$host:443$request_uri;
+}
+
+server {
+	listen	8080;
 	listen	[::]:8080;
 	#server_name _;	#localhost
 	server_name	localhost;
-	return 301 https://$host$request_uri;
+	return 301 https://$host:4433$request_uri;
 }
 
 server {
