--- a/retourVm/transcendance/services/Webserver/default.conf
+++ b/retourVm/transcendance/services/Webserver/default.conf
@@ -3,6 +3,7 @@ server {
 	listen	[::]:80;
 	#server_name _;	#localhost
 	server_name	localhost;
+	port_in_redirect	off;
 	return 301 https://$host:443$request_uri;
 }
 
@@ -11,6 +12,7 @@ server {
 	listen	[::]:8080;
 	#server_name _;	#localhost
 	server_name	localhost;
+	port_in_redirect	off;
 	return 301 https://$host:4433$request_uri;
 }
 
