--- a/retourVm/transcendance/services/Chat/requirements.txt
+++ b/retourVm/transcendance/services/Chat/requirements.txt
@@ -3,6 +3,7 @@ async-timeout==4.0.3
 attrs==23.2.0
 autobahn==23.6.2
 Automat==22.10.0
+bleach==6.1.0
 cffi==1.16.0
 channels==4.1.0
 channels-redis==4.2.0
@@ -25,4 +26,5 @@ sqlparse==0.5.1
 Twisted==24.3.0
 txaio==23.1.1
 typing_extensions==4.12.2
+webencodings==0.5.1
 zope.interface==6.4.post2
