Changed sent message for password reset so that the front receiives what it wants

--- a/services/Webserver/default.conf
+++ b/services/Webserver/default.conf
@@ -3,8 +3,8 @@ server {
 	listen	[::]:80;
 	#server_name _;	#localhost
 	server_name	localhost;
-	port_in_redirect	off;
-	return 301 https://$host:443$request_uri;
+	#port_in_redirect	off;
+	return 301 https://$host$request_uri;
 }
 
 #server {
