--- a/services/Chat/requirements.txt
+++ b/services/Chat/requirements.txt
@@ -17,6 +17,7 @@ django-cors-headers==4.4.0
 hyperlink==21.0.0
 idna==3.7
 incremental==24.7.2
+jwt==1.3.1
 msgpack==1.0.8
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
