--- a/services/User/requirements.txt
+++ b/services/User/requirements.txt
@@ -2,7 +2,7 @@ asgiref==3.8.1
 bcrypt==4.2.0
 certifi==2024.7.4
 charset-normalizer==3.3.2
-Django==5.0.7
+Django==4.2.3`:
 django-cors-headers==4.4.0
 idna==3.7
 PyJWT==2.9.0
