--- a/services/User/requirements.txt
+++ b/services/User/requirements.txt
@@ -1,10 +1,16 @@
 asgiref==3.8.1
 bcrypt==4.2.0
+blinker==1.8.2
 certifi==2024.7.4
 charset-normalizer==3.3.2
-Django==4.2.3`:
+click==8.1.7
+Django==5.0.7
 django-cors-headers==4.4.0
+Flask==3.0.3
 idna==3.7
+itsdangerous==2.2.0
+Jinja2==3.1.4
+MarkupSafe==2.1.5
 PyJWT==2.9.0
 pyotp==2.9.0
 pypng==0.20220715.0
@@ -14,4 +20,4 @@ requests==2.32.3
 sqlparse==0.5.1
 typing_extensions==4.12.2
 urllib3==2.2.2
-daphne==4.1.2
+Werkzeug==3.0.4
