--- a/services/Webserver/default.conf
+++ b/services/Webserver/default.conf
@@ -55,6 +55,7 @@ server {
 	location /svg {
 		root		/app/;
 		autoindex	off;
+		add_header	Cache-Control "public, max-age=15552000";
 	}
 
 	location /images {
