--- a/services/User/requirements.txt
+++ b/services/User/requirements.txt
@@ -4,6 +4,7 @@ blinker==1.8.2
 certifi==2024.7.4
 charset-normalizer==3.3.2
 click==8.1.7
+daphne==4.1.2
 Django==5.0.7
 django-cors-headers==4.4.0
 Flask==3.0.3
