--- a/services/compose.yml
+++ b/services/compose.yml
@@ -120,16 +120,16 @@ services:
   webserver:
     hostname: webserver
     container_name: webserver
-    depends_on:
-      user:
-        condition: service_healthy
-        restart: true
-      chat:
-        condition: service_healthy
-        restart: true
-      mail:
-        condition: service_healthy
-        restart: true
+    # depends_on:
+    #   user:
+    #     condition: service_healthy
+    #     restart: true
+    #   chat:
+    #     condition: service_healthy
+    #     restart: true
+    #   mail:
+    #     condition: service_healthy
+    #     restart: true
     pull_policy: build
     build:
       context: Webserver/
