--- a/services/User/requirements.txt
+++ b/services/User/requirements.txt
@@ -12,6 +12,9 @@ idna==3.7
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
+psycopg==3.2.1
+psycopg-binary==3.2.1
+psycopg-pool==3.2.2
 PyJWT==2.9.0
 pyotp==2.9.0
 pypng==0.20220715.0
