Updated composy.yml to add route to postgres in user module

--- a/services/compose.yml
+++ b/services/compose.yml
@@ -71,6 +71,7 @@ services:
     restart: unless-stopped
     environment:
       - SERVER_JWT_KEY=$SERVER_JWT_KEY
+	  - POSTGRES_HOST=$USER_POSTGRES_HOST
       - POSTGRES_PASSWORD=$USER_POSTGRES_PASSWORD
       - POSTGRES_USER=$USER_POSTGRES_USER
       - PGPORT=$USER_POSTGRES_PORT
