Updated user's Dockerfile to always start with a fresh database

--- a/services/User/Dockerfile
+++ b/services/User/Dockerfile
@@ -11,4 +11,4 @@ COPY transcendance/ transcendance/
 HEALTHCHECK     --interval=10s --timeout=1s --retries=3 --start-period=30s \
         CMD wget -q --tries=1 --spider --no-check-certificate http://localhost:8001/user/ping; if [ $? -eq 0 ]; then exit 0; else exit 1; fi
 
-CMD cd transcendance && daphne -b 0.0.0.0 -p 8001 transcendance.asgi:application
+CMD cd transcendance && python manage.py flush --noinput && python manage.py makemigrations user && python manage.py migrate && daphne -b 0.0.0.0 -p 8001 transcendance.asgi:application
