--- a/services/Webserver/default.conf
+++ b/services/Webserver/default.conf
@@ -87,18 +87,18 @@ server {
 	proxy_set_header	X-Forward-Host	$server_name;
 	}
 
-#	location /pong/ {
-#	proxy_pass		http://pong:8003;
-#	proxy_http_version	1.1;
-#	proxy_set_header	Upgrade		$http_upgrade;
-#	proxy_set_header	Connection	"upgrade";
-#	proxy_redirect		off;
-#	proxy_set_header	Host		$host;
-#	proxy_set_header	X-Real-IP	$remote_addr;
-#	proxy_set_header	X-Forward-For	$proxy_add_x_forwarded_for;
-#	proxy_set_header	X-Forward-Host	$server_name;
-#	}
-#
+	location /ws/pong/ {
+	proxy_pass		http://pong:8004;
+	proxy_http_version	1.1;
+	proxy_set_header	Upgrade		$http_upgrade;
+	proxy_set_header	Connection	"upgrade";
+	proxy_redirect		off;
+	proxy_set_header	Host		$host;
+	proxy_set_header	X-Real-IP	$remote_addr;
+	proxy_set_header	X-Forward-For	$proxy_add_x_forwarded_for;
+	proxy_set_header	X-Forward-Host	$server_name;
+	}
+
 #	location /tetris/ {
 #	proxy_pass		http://tetris:8004;
 #	proxy_http_version	1.1;
