--- a/services/compose.yml
+++ b/services/compose.yml
@@ -16,9 +16,21 @@ services:
     networks:
       - transcendance
 
-#  pong_cache:
-#    image: redis@sha256:eaea8264f74a95ea9a0767c794da50788cbd9cf5223951674d491fa1b3f4f2d2
-#
+  pong_cache:
+    hostname: redis_pong
+    container_name: redis_pong
+    image: redis@sha256:eaea8264f74a95ea9a0767c794da50788cbd9cf5223951674d491fa1b3f4f2d2
+    # healthcheck:
+    #   test: ["CMD-SHELL", "redis-cli ping | grep PONG"]
+    #   start_period: 30s
+    #   interval: 10s
+    #   timeout: 5s
+    #   retries: 5
+    restart: unless-stopped
+    networks:
+      - transcendance
+    command: --port 6380
+
 #  tetris_cache:
 #    image: redis@sha256:eaea8264f74a95ea9a0767c794da50788cbd9cf5223951674d491fa1b3f4f2d2
 #
@@ -26,9 +38,6 @@ services:
 #
 #
 #
-#
-#  pong_db:
-#    volume:
 #
 #  tetris_db:
 #    volume:
@@ -53,13 +62,32 @@ services:
       - POSTGRES_USER=$USER_POSTGRES_USER
       - PGPORT=$USER_POSTGRES_PORT
 
+  pong_db:
+    hostname: postgres_pong
+    container_name: postgres_pong
+    image: postgres@sha256:d898b0b78a2627cb4ee63464a14efc9d296884f1b28c841b0ab7d7c42f1fffdf
+    # healthcheck:
+    #   test: ["CMD-SHELL", "sh -c 'pg_isready -U $${POSTGRES_USER} -d postgres'"]
+    #   start_period: 30s
+    #   interval: 10s
+    #   timeout: 5s
+    #   retries: 5
+    restart: unless-stopped
+    networks:
+      - transcendance
+    #  volume:
+    environment:
+      - POSTGRES_PASSWORD=$PONG_POSTGRES_PASSWORD
+      - POSTGRES_USER=$PONG_POSTGRES_USER
+      - PGPORT=$PONG_POSTGRES_PORT
+
   user:
     hostname: user
     container_name: user
-      #depends_on:
-      #user_db:
-      #  condition: service_healthy
-      #  restart: true
+    #depends_on:
+    #  user_db:
+    #    condition: service_healthy
+    #    restart: true
     pull_policy: build
     build:
       context: User
@@ -111,12 +139,30 @@ services:
       - EMAIL_HOST_USER=$EMAIL_HOST_USER
       - EMAIL_HOST_PASSWORD=$EMAIL_HOST_PASSWORD
 
-#  pong:
-#    pull_policy: build
-#    build:
-#      context: services
-#      dockerfile: Pong/Dockerfile
-#
+  pong:
+    hostname: pong
+    container_name: pong
+    # depends_on:
+    #   pong_cache:
+    #     condition: service_healthy
+    #     restart: true
+    #   pong_db
+    #     condition: service_healthy
+    #     restart: true
+    pull_policy: build
+    build:
+      context: Pong
+      dockerfile: Dockerfile
+    networks:
+      - transcendance
+    restart: unless-stopped
+    environment:
+      - SERVER_JWT_KEY=$SERVER_JWT_KEY
+      - POSTGRES_HOST=$PONG_POSTGRES_HOST
+      - POSTGRES_PASSWORD=$PONG_POSTGRES_PASSWORD
+      - POSTGRES_USER=$PONG_POSTGRES_USER
+      - PGPORT=$PONG_POSTGRES_PORT
+
 #  tetris:
 #    pull_policy: build
 #    build:
@@ -200,4 +246,8 @@ volumes:
 #               daphne  8002
 #       ping
 #               daphne  8003
+#       pong
+#               daphne  8004
+#               redis   6380
+#               postgre 5433
 
