--- a/services/Pong/requirements.txt
+++ b/services/Pong/requirements.txt
@@ -19,6 +19,9 @@ idna==3.7
 incremental==24.7.2
 jwt==1.3.1
 msgpack==1.0.8
+psycopg==3.2.1
+psycopg-binary==3.2.1
+psycopg-pool==3.2.2
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pycparser==2.22
