Added service ping + cleaned project a bit

--- a/services/Webserver/default.conf
+++ b/services/Webserver/default.conf
@@ -64,7 +64,7 @@ server {
 	}
 
 	location /ws/chat/ {
-	proxy_pass		http://chat:8000;
+	proxy_pass			http://chat:8000;
 	proxy_http_version	1.1;
 	proxy_set_header	Upgrade		$http_upgrade;
 	proxy_set_header	Connection	"upgrade";
@@ -76,7 +76,19 @@ server {
 	}
 
 	location /user/ {	#	No ws needed
-	proxy_pass		http://user:8001;
+	proxy_pass			http://user:8001;
+	proxy_http_version	1.1;
+#	proxy_set_header	Upgrade		$http_upgrade;
+#	proxy_set_header	Connection	"upgrade";
+	proxy_redirect		off;
+	proxy_set_header	Host		$host;
+	proxy_set_header	X-Real-IP	$remote_addr;
+	proxy_set_header	X-Forward-For	$proxy_add_x_forwarded_for;
+	proxy_set_header	X-Forward-Host	$server_name;
+	}
+
+	location /ping/ {	#	No ws needed
+	proxy_pass			http://ping:8003;
 	proxy_http_version	1.1;
 #	proxy_set_header	Upgrade		$http_upgrade;
 #	proxy_set_header	Connection	"upgrade";
@@ -88,7 +100,7 @@ server {
 	}
 
 	location /ws/pong/ {
-	proxy_pass		http://pong:8004;
+	proxy_pass			http://pong:8004;
 	proxy_http_version	1.1;
 	proxy_set_header	Upgrade		$http_upgrade;
 	proxy_set_header	Connection	"upgrade";
@@ -100,7 +112,7 @@ server {
 	}
 
 #	location /tetris/ {
-#	proxy_pass		http://tetris:8004;
+#	proxy_pass			http://tetris:8004;
 #	proxy_http_version	1.1;
 #	proxy_set_header	Upgrade		$http_upgrade;
 #	proxy_set_header	Connection	"upgrade";
@@ -111,8 +123,8 @@ server {
 #	proxy_set_header	X-Forward-Host	$server_name;
 #	}
 
-        location = /health {
-                access_log off;
-                return 204;
-        }
+	location = /health {
+			access_log off;
+			return 204;
+	}
 }
