Added views for retrieving players in Pong db

--- a/services/compose.yml
+++ b/services/compose.yml
@@ -100,6 +100,8 @@ services:
     environment:
       - DUMP=$DUMP
       - SERVER_JWT_KEY=$SERVER_JWT_KEY
+      - FTAUTHSECRET=$FTAUTHSECRET
+      - FTAUTHUID=$FTAUTHUID
       - POSTGRES_HOST=$USER_POSTGRES_HOST
       - POSTGRES_PASSWORD=$USER_POSTGRES_PASSWORD
       - POSTGRES_USER=$USER_POSTGRES_USER
